# viDE

./: README.md  metadata.json  package.json
archforge-de/: ARCHITECTURE.md  Cargo.toml
archforge-de/ai/: app.py  cli.py
archforge-de/apps/forge-edit/: main.py
archforge-de/appstore/: main.py
archforge-de/compositor/: Cargo.toml
archforge-de/compositor/src/: animations.rs  backend.rs  main.rs  overclock.rs  state.rs  window_manager.rs
archforge-de/crust/: crustc.py
archforge-de/shell/about/: main.py
archforge-de/shell/control-center/: main.py
archforge-de/shell/dock/: main.py
archforge-de/shell/launcher/: main.py
archforge-de/shell/panel/: main.py
archforge-de/shell/taskview/: main.py
configs/archforge/: archforge.conf
configs/rofi/: spotlight.rasi
installer/: main.py
installer/core/: process_runner.py
installer/ui/: app_window.py  pages.py
scripts/: 01-hardware-detect.sh  02-base-install.sh  03-surface-kernel.sh  04-post-install.sh  build_iso.sh  compile_installer.sh  utils.sh
