[package]
name = "archforge-compositor"
version = "0.9.0-deepbeta1"
edition = "2021"
authors = ["ArchForge Team"]
description = "The core Wayland compositor for the ArchForge Desktop Environment"

[dependencies]
smithay = "0.3.0"
wayland-server = "0.31.1"
wayland-protocols = "0.31.2"
xkbcommon = "0.7.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
cgmath = "0.18.0" # For animation/spring physics math
